--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - postgres
 
   postgres:
-    image: postgres:latest
+    image: postgres:16.4-alpine3.20
     environment:
       POSTGRES_USER: user
       POSTGRES_PASSWORD: password
