--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - "7002:7002"
     environment:
       - DATABASE_URL=postgres://user:password@postgres:5432/mydatabase
+      - MEDUSA_BACKEND_URL=http://64.225.110.85:9000
     volumes:
       - .:/app
     depends_on:
