--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
       context: .
       args:
         - MEDUSA_BACKEND_URL=http://64.225.110.85:9000
+        - VITE_BACKEND_URL=http://64.225.110.85:9000
     ports:
       - "9000:9000"
       - "7001:7001"
