--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
 		"build": "cross-env npm run clean && npm run build:server",
 		"build:server": "cross-env npm run clean && tsc -p tsconfig.server.json",
 		"build:admin": "cross-env medusa-admin build --deployment",
-		"build:vendor": "cross-env VITE_BACKEND_URL=http://64.225.110.85:9000 medusa-vendor build",
+		"build:vendor": "cross-env MEDUSA_BACKEND_URL=http://64.225.110.85:9000 VITE_BACKEND_URL=http://64.225.110.85:9000 medusa-vendor build",
 		"watch": "cross-env tsc --watch",
 		"test": "cross-env jest",
 		"seed": "cross-env medusa seed -f ./data/seed.json",
 		"start": "cross-env npm run build && medusa start",
 		"start:custom": "cross-env npm run build && node --preserve-symlinks --trace-warnings index.js",
 		"dev": "cross-env npm run build:server && medusa develop",
-		"dev:vendor": "cross-env VITE_BACKEND_URL=http://64.225.110.85:9000 medusa-vendor develop",
+		"dev:vendor": "cross-env MEDUSA_BACKEND_URL=http://64.225.110.85:9000  VITE_BACKEND_URL=http://64.225.110.85:9000 medusa-vendor develop",
 		"generate:migration": "npx typeorm migration:create",
 		"lint": "./node_modules/.bin/eslint src/ --fix",
 		"postinstall": "patch-package"
